모바일처리

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div class="game-board">
             <div class="classroom-background"></div>
             <div class="students-container"></div>
+            <div id="joystick-container" class="joystick-container">
+                <div id="joystick-base" class="joystick-base">
+                    <div id="joystick-stick" class="joystick-stick"></div>
+                </div>
+                <button id="action-button" class="action-button">잡기</button>
+            </div>
         </div>
 
         <div class="control-panel">
